[package]
name = "hml-rs"
version = "0.2.0"
edition = "2021"
readme = "README.md"
authors = ["Gavin J Stark"]
description = "Markup language events and readers, supporting 'human markup language'\n"
homepage = "https://github.com/atthecodeface/hml-rs"
documentation = "https://docs.rs/hml-rs"
keywords = ["xml", "parsing", "parser"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atthecodeface/hml-rs"

[features]
default = ["xml"]
xml = ["dep:clap", "dep:xml-rs"]

[dependencies.utf8-read]
version = "0.4.0"

[dependencies.clap]
version = "~4.4"
optional = true

[dependencies.thiserror]
version = "1.0"

[dependencies.xml-rs]
version = "0.8.3"
optional = true

[[bin]]
name = "hmlconvert"
required-features = ["xml"]
